# nano-claude-code

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  nano-claude.config.toml.example  nano-claw.config.toml.example  pyproject.toml  start.sh
.github/workflows/: pages.yml
nano_claude_code/: __init__.py  __main__.py  agent.py  agents.py  cli.py  config.py  frontmatter.py  memory.py  openai_compat.py  permissions.py  prompts.py  session.py  skills.py  stream_json.py  tools_impl.py
nano_claw_code/: cli.py  config.py
scripts/: run_pytest_with_dotenv.py
swebench_harness/: compare_results.py  run.sh  run_swebench_claude_code.py
swebench_harness/results/nano-claw-code/: run_config_749b78d91470.json  timing.jsonl  timing_summary.json
tests/: conftest.py  test_agent_streaming_mock.py  test_agents_skills.py  test_config.py  test_e2e_workflows.py  test_frontmatter.py  test_integration_api.py  test_memory.py  test_permissions.py  test_prompts.py  test_session.py  test_stream_json.py  test_tools_impl.py
website/: index.html  script.js  style.css
